# 2025-KAIST-Mobility-Challenge

./: .gitignore  README.md  cav_docker.sh
bisa/: CMakeLists.txt  package.xml
bisa/config/: bridge_config.yaml  cav_config.yaml  mpc_params.yaml  path.yaml
bisa/hdmap_data/: global_info.json  lanes.json  link_set.json  node_set.json
bisa/include/bisa/: collision_avoidance_node.hpp  local_path_pub.hpp  local_path_pub_cpp.hpp  mpc_controller.hpp  mpc_controller_cpp.hpp  mpc_path_tracker.hpp  mpc_path_tracker_cpp.hpp  visualize_hvs.hpp
bisa/launch/: problem2.launch.py  problem3_cpp_launch.py
bisa/msg/: LapInfo.msg
bisa/rviz/: bisa.rviz  problem2.rviz
bisa/scripts/: collision_avoidance_node.py  dijkstra_planner.py  get_node_coords.py  global_path_pub.py  global_path_pub_multi.py  hdmap_generator.py  hdmap_visualizer.py  lane_visualizer.py  mgeo_class_defs.py  mpc_tuner_gui.py  obstacle_relay.py
bisa/src/: collision_avoidance_node.cpp  frenet_planner.cpp  local_path_pub.cpp  local_path_pub_cpp.cpp  mpc_controller.cpp  mpc_controller_cpp.cpp  mpc_path_tracker.cpp  mpc_path_tracker_cpp.cpp  synchronized_start_node.cpp  visualize_hvs.cpp
src/: mpc_config.json
src/launch/: global_path.launch.py
src/path/: problem1-1_CAV1.csv
src/rviz/: default.rviz
src/script/: MPC_solver.py  MPC_tuner.py  path_following.py  performance_analyzer.py  trajectory_logger.py  utils.py
